<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_driving"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="charleszhu.qunnipiac.edu.seeo2.DrivingActivity"
    android:orientation="vertical">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Make"
                />
            <EditText
                android:id="@+id/makeField"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Model"
                />

            <EditText
                android:id="@+id/modelField"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Year"
                />
            <EditText
                android:id="@+id/yearField"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DailyDistance"
                />
            <EditText
                android:id="@+id/distanceField"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
        </TableRow>

    <Button
        android:id="@+id/resultsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/Results"
        android:onClick="onResults"
        />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        />
</TableLayout>
