<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_household"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="charleszhu.qunnipiac.edu.seeo2.HouseholdActivity">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Electric"
            />
        <EditText
            android:id="@+id/electricField"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gas"
            />

        <EditText
            android:id="@+id/gasField"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bathrooms"
            />
        <EditText
            android:id="@+id/bathField"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </TableRow>

    <Button
        android:id="@+id/resultsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/Results"
        android:onClick="onResults"
        />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        />

</TableLayout>
