<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="charleszhu.qunnipiac.edu.seeo2.MainActivity"
    android:orientation="vertical"
    android:background="#3f87fc">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="32dp"
        />

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/earthicon"
        android:tint="#60fff9"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/MyEmissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MyEmissions"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="32dp"
        android:paddingTop="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/StatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NationalStatus"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="32dp"
        android:paddingTop="32dp"
        android:onClick="onClick"
        />

</LinearLayout>
